ingress/ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: hellohttp-in
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
    rules:
    - http:
        paths:
        - path: /api
          backend:
            serviceName: hellohttp-backend
            servicePort: 80
        - path: /load
          backend:
            serviceName: helloload
            servicePort: 80
        - path: /wedding(/|$)(.*)
          backend:
            serviceName: wedding
            servicePort: 80
        - path: /([a-zA-Z]+)
          backend:
            serviceName: hellohttp
            servicePort: 8080
    backend:
        serviceName: hellohttp
        servicePort: 8080
